# ThNetwork

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  compile_commands.json  platformio.ini  refresh_webpages.py
Common/: .gitignore  CMakeLists.txt  library.json
Common/src/: Messages.hpp  logger.cpp  logger.hpp  serializer.hpp
Host/: .clangd  .gitignore  CMakeLists.txt  platformio.ini
Host/src/: App.cpp  EspNow.cpp  RaiiFile.cpp  ReadingsStorage.cpp  ReadingsStorage.hpp  WebView.cpp  utils.cpp
Host/unittests/: TestExample.cpp
Transmitter/: .clang-format  .clangd  .gitignore  CMakeLists.txt  TODO.txt  log.txt  platformio.ini
Transmitter/lib/adapters/: ArduinoAdp.cpp  ArduinoAdp.hpp  EspAdp.cpp  EspAdp.hpp  EspNowAdp.cpp  PinsAdp.hpp  WiFiAdp.cpp  WiFiAdp.hpp  WireAdp.cpp  WireAdp.hpp
Transmitter/src/: App.cpp  App.hpp  EspNow.cpp  EspNow.hpp  Sensor.cpp  boardsettings.hpp  config.cpp  config.hpp  main.cpp  utils.cpp  utils.hpp
Transmitter/unittests/: TestUtils.cpp
Transmitter/unittests/mocks/: Arduino.h  ArduinoAdpStub.cpp  EspAdpStub.cpp  EspNowAdpMock.cpp  WifiAdpMock.cpp
doc/: HostClass.puml  adminActivity.puml  adminPage.puml  general.md
resources/: diagram.drawio
src/: App.cpp  App.hpp  Config.cpp  Config.hpp  EspNow.cpp  EspNow.hpp  EspNowHost.cpp  EspNowHost.hpp  MacAddr.cpp  MacAddr.hpp  Messages.hpp  RaiiFile.cpp  RaiiFile.hpp  ReadingsBuffer.hpp  ReadingsCleaner.cpp  ReadingsCleaner.hpp  ReadingsStorage.cpp  ReadingsStorage.hpp  RingBuffer.hpp  SystemInit.cpp  SystemInit.hpp  THMessage.hpp  WebView.cpp  WebView.hpp  boardsettings.hpp  index.html  index2.html  logger.cpp  logger.hpp  main.cpp  serializer.hpp  utils.cpp  utils.hpp
src/adapters/: ArduinoAdp.hpp  EspAdp.hpp  EspNowAdp.hpp  PinsAdp.hpp  WiFiAdp.hpp
src/adapters/esp2866/: ArduinoAdp.cpp  EspAdp.cpp  EspNowAdp.cpp  PinsAdp.cpp  WiFiAdp.cpp  WireAdp.cpp
src/adapters/esp32/: Arduino32Adp.cpp  Arduino32Adp.hpp  ArduinoAdp.cpp  EspNow32Adp.cpp  EspNow32Adp.hpp  EspNowAdp.cpp  EspNowAdp.hpp  IArduino32Adp.hpp  IEspNowAdp.hpp  Wifi32Adp.cpp  Wifi32Adp.hpp
src/common/: MacAddr.cpp  MacAddr.hpp  Messages.hpp  logger.cpp  logger.hpp  serializer.hpp  types.hpp
src/host/: App.cpp  App.hpp  BoardSettings.hpp  Button.cpp  Button.hpp  ConfStorage.cpp  ConfStorage.hpp  Config.cpp  Config.hpp  EspNow.cpp  EspNow.hpp  EspNowPairingManager.cpp  EspNowPairingManager.hpp  EspNowServer.cpp  EspNowServer.hpp  IConfStorage.hpp  IResources.hpp  InfoLed.hpp  LedIndicator.cpp  LedIndicator.hpp  RaiiFile.cpp  RaiiFile.hpp  ReadingsCleaner.cpp  ReadingsStorage.cpp  ReadingsStorage.hpp  Resources.cpp  Resources.hpp  RingBuffer.hpp  Timer.cpp  Timer.hpp  WebPageMain.cpp  WebPageMain.hpp  WebServer.hpp  WebView.cpp  WebView.hpp  WebWifiConfig.cpp  WebWifiConfig.hpp  WifiConfigurator.cpp  WifiConfigurator.hpp  WifiConfiguratorWebServer.cpp  (+7 more)
src/host/adapters/: Arduino32Adp.cpp  Arduino32Adp.hpp  ESP32Adp.cpp  ESP32Adp.hpp  EspNow32Adp.cpp  EspNow32Adp.hpp  IArduino32Adp.hpp  IESP32Adp.hpp  IEspNow32Adp.hpp  IFileSystem32Adp.hpp  IRaiiFile.hpp  IWifi32Adp.hpp  LittleFS32Adp.cpp  LittleFS32Adp.hpp  RaiiFile.hpp  SPIFS32Adp.hpp  Wifi32Adp.cpp  Wifi32Adp.hpp
src/host/html/: admin.html  admin.js  admin_old.html  chart.html  charts.js  index copy.html  index.html  index_dev.html  microChart.js  picoindex.html  prototyping.html  wifiSettings.html
src/host/interfaces/: IConfStorage.hpp  IRaiiFile.hpp  IResources.hpp
src/host/webserver/: EventSrcClient.cpp  EventSrcClient.hpp  IEventSrcClient.hpp  IWebRequest.hpp  IWebServer.hpp  WebRequest.cpp  WebRequest.hpp  WebServer.cpp  WebServer.hpp
src/transmitter/: App.cpp  App.hpp  BoardSettings.hpp  EspNow.cpp  EspNow.hpp  Sensor.cpp  Sensor.hpp  boardsettings.hpp  config.cpp  config.hpp  pinout.cpp  pinout.hpp  utils.cpp  utils.hpp
src/transmitter/adapters/: Arduino8266Adp.cpp  Arduino8266Adp.hpp  Esp8266Adp.cpp  Esp8266Adp.hpp  EspNow8266Adp.cpp  EspNow8266Adp.hpp  IArduino8266Adp.hpp  IEsp8266Adp.hpp  IEspNow8266Adp.hpp  IWifi8266Adp.hpp  Wifi8266Adp.cpp  Wifi8266Adp.hpp
unittests/: TestReadingsBuffer.cpp  TestReadingsStorage.cpp  TestRingBuffer.cpp  test_main.cpp
unittests/common/: TestMacAddr.cpp  TestSerializer.cpp
unittests/host/: TestConfStorage.cpp  TestEspNowPairingManager.cpp  TestRaiiFile.cpp  TestReadingsStorage.cpp  TestRingBuffer.cpp
unittests/host/mocks/: Arduino32AdpMock.hpp  ConfStorageMock.hpp  FileMock.hpp  FileSystem32AdpMock.hpp  RaiiFileMock.hpp  ResourcesMock.hpp  WebRequestMock.hpp  WebServerMock.hpp  Wifi32AdpMock.hpp
unittests/host/tests/: TestButton.cpp  TestConfStorage.cpp  TestEspNowPairingManager.cpp  TestRaiiFile.cpp  TestReadingsStorage.cpp  TestRingBuffer.cpp  TestWebPageMain.cpp  TestWifiConfigurator.cpp  TestWifiConfiguratorWebServer.cpp
unittests/mocks/: Arduino.cpp  Arduino.h  Arduino32AdpMock.hpp  ArduinoAdpMock.cpp  ArduinoAdpStub.cpp  ConfStorageMock.hpp  FS.h  FileMock.hpp  FileSystemMock.hpp  FileSystemStub.hpp  SPIFFS.h  SensorMock.cpp  WifiAdpMock.cpp
unittests/transmitter/: TestEspNow.cpp  TestUtils.cpp
unittests/transmitter/mocks/: Arduino8266AdpMock.hpp  Esp8266AdpMock.hpp  EspNow8266AdpMock.hpp  Wifi8266AdpMock.hpp
unittests/transmitter/tests/: TestEspNow.cpp  TestUtils.cpp
